crates/service/tests/diagnostics/snapshots/features__diagnostics__deprecated__global.snap
---
source: crates/service/tests/diagnostics/deprecated.rs
expression: response
---
{
  "kind": "full",
  "items": [
    {
      "range": {
        "start": {
          "line": 10,
          "character": 15
        },
        "end": {
          "line": 10,
          "character": 16
        }
      },
      "severity": 2,
      "code": "deprecated",
      "source": "wat",
      "message": "global `0` is deprecated",
      "tags": [
        2
      ]
    },
    {
      "range": {
        "start": {
          "line": 12,
          "character": 15
        },
        "end": {
          "line": 12,
          "character": 17
        }
      },
      "severity": 2,
      "code": "deprecated",
      "source": "wat",
      "message": "global `$g` is deprecated: this is deprecated",
      "tags": [
        2
      ]
    }
  ]
}
